# osparc-function-services

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: check-image.yml
.osparc/demo_func/: metadata.yml  runtime.yml
.osparc/sensitivity_ua_linear_regression/: docker-compose.overwrite.yml  metadata.yml  runtime.yml
.osparc/sensitivity_ua_test_func/: docker-compose.overwrite.yml  metadata.yml  runtime.yml
docker/: Dockerfile  entrypoint.sh
scripts/: docker.make  integration.make  registry.make
src/osparc_function_services/: __init__.py  _utils.py  app.py  cli.py  demo_services.py  demo_units.py  neuro_demo_services.py  sensitivity_ua.py  sensitivity_ua_services.py
tests/: conftest.py  test_sensitivity_ua.py  test_utils.py
